# kto

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE_BODY.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  RELEASING.md  config.example.toml  release_body.md
gui-cpp/: CMakeLists.txt  README.md  app.manifest  app.rc  main.cpp
installer/: kto.iss
scoop/: kto.json
scripts/: compose_release_body.py
src/: banner.rs  cli.rs  error.rs  lib.rs  main.rs  runtime.rs
src/app/: achievements.rs  config.rs  mod.rs  state.rs
src/discord/: mod.rs  rpc.rs  state_mapper.rs
src/engine/: ABI_NOTE.md  channel.rs  handshake.rs  mod.rs  pmkid.rs  radio.rs  sim.rs
src/fun/: achievements.rs  easter_eggs.rs  mod.rs  streaks.rs  xp.rs
src/net/: fingerprint.rs  frames.rs  mod.rs  oui.rs  rogue.rs
src/notify/: debounce.rs  events.rs  mod.rs
src/session/: export_csv.rs  export_html.rs  export_json.rs  log.rs  mod.rs
src/ui/: mod.rs
src/ui/cli/: mod.rs  printer.rs  table.rs
src/ui/tui/: app.rs  boss_mode.rs  keys.rs  matrix_rain.rs  mod.rs  ui.rs
src/update/: checker.rs  info.rs  mod.rs
src/util/: mac.rs  mod.rs  signal.rs  time.rs
tests/: export_test.rs  frame_build_test.rs  sim_engine_test.rs
